<resources>
    <string name="app_name">Classic Car Leads</string>
    <string name="mainLogo_contentDescription">Main Logo Img</string>
    <string name="emailHint">Email</string>
    <string name="passwordHint">Password</string>
    <string name="btnRegister">Register</string>
    <string name="btnLogin">Log In</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="btn_register">Register</string>
    <string name="btn_cancel">Cancel</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="btn_search">Search</string>
    <string name="first_name">First Name</string>
    <string name="description">Description</string>
    <string name="price">Price</string>
    <string name="title">Title</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="btnSubmit">Submit</string>
    <string name="btnCancel">Cancel</string>
    <string name="btnView">View</string>
    <string name="btn_save">Save</string>
    <string name="btn_clear">Clear</string>
    <string name="zipcode">Zipcode</string>
    <string name="listingid">ListingID</string>
    <string name="listing_title">Listing Title</string>
    <string name="_price">Price</string>
    <string name="OK">OK</string>
    <string name="CANCEL">CANCEL</string>
    <string name="comment">Comment</string>

    <string-array name="states">
        <item>Alabama</item>
        <item>Alaska</item>
        <item>Arizona</item>
        <item>Arkansas</item>
        <item>California</item>
        <item>Colorado</item>
        <item>Connecticut</item>
        <item>Deleware</item>
        <item>Florida</item>
        <item>Georgia</item>
        <item>Hawaii</item>
        <item>Idaho</item>
        <item>Illinois</item>
        <item>Indiana</item>
        <item>Iowa</item>
        <item>Kansas</item>
        <item>Kentucky</item>
        <item>Louisiana</item>
        <item>Maine</item>
        <item>Maryland</item>
        <item>Massachusetts</item>
        <item>Michigan</item>
        <item>Minnesota</item>
        <item>Mississippi</item>
        <item>Missouri</item>
        <item>Montana</item>
        <item>Nebraska</item>
        <item>Nevada</item>
        <item>New Hampshire</item>
        <item>New Jersey</item>
        <item>New Mexico</item>
        <item>New York</item>
        <item>North Carolina</item>
        <item>North Dakota</item>
        <item>Ohio</item>
        <item>Oklahoma</item>
        <item>Oregon</item>
        <item>Pennsylvania</item>
        <item>Rhode Island</item>
        <item>South Carolina</item>
        <item>South Dakota</item>
        <item>Tennessee</item>
        <item>Texas</item>
        <item>Utah</item>
        <item>Vermont</item>
        <item>Virginia</item>
        <item>Washington</item>
        <item>West Virginia</item>
        <item>Wisconsin</item>
        <item>Wyoming</item>
    </string-array>

    <array name="makes">
        <item>Ford</item>
        <item>Chevrolet</item>
        <item>Buick</item>
        <item>BMW</item>
        <item>Dodge</item>
        <item>Plymouth</item>
        <item>Chrysler</item>
        <item>GMC</item>
        <item>Rolls Royce</item>
        <item>Volkswagon</item>
    </array>

    <array name="models">
        <item>Anglia</item>
        <item>Camero</item>
        <item>Capri</item>
        <item>Corvette</item>
        <item>Chevelle</item>
        <item>Challenger</item>
        <item>Caprice</item>
        <item>Escort</item>
        <item>Lincoln Continental</item>
        <item>Charger</item>
        <item>Galaxie</item>
        <item>Shelby</item>
        <item>Shelby Cobra</item>
        <item>Mustang</item>
        <item>Monte Carlo SS</item>
        <item>Impala</item>
        <item>F-150</item>
        <item>F-100</item>
        <item>GT40</item>
        <item>Model T</item>
        <item>Ford F-Series</item>
        <item>Thunderbird</item>
        <item>Charger</item>
    </array>
</resources>
