<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.commandcenter.classiccarleads.Register_Activity"
    android:background="@drawable/layout_background">

    <ImageView
        android:layout_width="350dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/mainLogo_contentDescription"
        android:scaleType="fitCenter"
        android:src="@drawable/ccl_logo" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@drawable/trans_white_rectangle"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:gravity="left"
            android:padding="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Register new account!"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="italic"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"/>

            <EditText
                android:id="@+id/register_et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/emailHint"
                android:inputType="textEmailAddress"
                android:drawableLeft="@drawable/ic_person_50"/>

            <EditText
                android:id="@+id/register_et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/passwordHint"
                android:inputType="textPassword"
                android:drawableLeft="@drawable/ic_vpn_key"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="right"
                android:layout_marginTop="10dp">

                <Button
                    android:id="@+id/register_btnRegister"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_register"
                    android:textColor="@color/colorAccent"/>

                <Button
                    android:id="@+id/register_btnCancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_cancel"
                    android:textColor="@color/colorAccent"/>
            </LinearLayout>
        </LinearLayout>

    </ScrollView>

</RelativeLayout>
